<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_height="wrap_content" 
   	android:layout_width="fill_parent" 
   	android:stretchColumns="*"
   	android:layout_weight="0.2">   	
	<TableRow
	    android:layout_height="wrap_content"
	    android:baselineAligned="false" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/health_title"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/healthView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/loading"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	</TableRow>

	<TableRow
	    android:layout_height="wrap_content"
	    android:baselineAligned="false" >

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/status_title"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/statusView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/loading"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	</TableRow>
   	
	<TableRow
	    android:layout_height="wrap_content"
	    android:baselineAligned="false" >

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/level_title"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/levelView"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/loading"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	</TableRow>
   	
    <TableRow
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperature_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/temperatureView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
   	
    <TableRow
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/voltage_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/voltageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

</TableLayout>